kubernetes/main/apps/media/sonarr/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sonarr
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-networking
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: seerr
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: bazarr
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: recyclarr
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: prowlarr
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    # same-node ClusterIP replies miss CT reverse-xlate (socketLB
    # hostNamespaceOnly + endpointRoutes) and hit ingress policy
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: qbittorrent
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: prowlarr
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: qbittorrent
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    # metadata (skyhook)
    - toEntities: ["world"]
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
